--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   align-items: center;
 }
 body {
+  font-family: Montserrat;
   display: grid;
   place-items: center;
   height: 100vh;
@@ -41,6 +42,7 @@ body {
 }
 .mcqs h2 {
   font-size: 1.3em;
+  text-align: center;
 }
 
 .radio-button {
@@ -54,15 +56,49 @@ body {
 
 .radio-button label {
   display: block;
-  padding: 10px;
+  padding: 8px;
   background-color: gray;
   color: #fff;
   border: 1px solid #2980b9;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-align: center;
+  font-size: 1em;
 }
 
 .radio-button input:checked + label {
   background-color: black;
+}
+button {
+  background-color: #4d5b9e;
+  color: white;
+  border-radius: 5px;
+  font-size: 1em; /* Adjusted the font size for better readability */
+  padding: 1em 1.4em; /* Increased padding for better spacing */
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.1s ease;
+  outline: none; /* Remove default focus outline */
+}
+
+button:hover {
+  background-color: #3a476f;
+}
+button:active {
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.3);
+}
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.result p {
+  font-size: 1.4em;
+}
+
+.result button {
+  margin-left: 10px;
 }
