--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 .start {
   width: 800px;
-  background-color: whitesmoke;
+  background-color: white;
   height: 900px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Adjust the values as needed */
 }
 body {
   font-family: Montserrat;
   display: grid;
   place-items: center;
   height: 100vh;
-  background-color: blacks;
 }
 .start h1 {
   font-size: 4em;
@@ -42,7 +42,7 @@ body {
 }
 .mcqs h2 {
   font-size: 1.3em;
-  text-align: center;
+  text-align: le;
 }
 
 .radio-button {
@@ -57,25 +57,26 @@ body {
 .radio-button label {
   display: block;
   padding: 8px;
-  background-color: gray;
-  color: #fff;
-  border: 1px solid #2980b9;
+  background-color: white;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-align: center;
-  font-size: 1em;
+  font-size: 0.9em;
+  border: 1px solid black;
+  font-weight: 700;
 }
 
 .radio-button input:checked + label {
-  background-color: black;
+  background-color: #d6dbf5;
 }
 button {
   background-color: #4d5b9e;
   color: white;
   border-radius: 5px;
   font-size: 1em; /* Adjusted the font size for better readability */
-  padding: 1em 1.4em; /* Increased padding for better spacing */
+  padding: 1.4em 1.6em;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.1s ease;
@@ -101,4 +102,16 @@ button:active {
 
 .result button {
   margin-left: 10px;
+}
+.correct-answer {
+  background-color: green;
+}
+
+.incorrect-answer {
+  background-color: red;
+}
+.quiz {
+  color: #4d5b9e;
+  font-size: 3em;
+  margin-top: 0;
 }
