--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,13 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Adjust the values as needed */
+  /* background-image: url("./components/quiz_app_backgroung_images.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
 }
 body {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   display: grid;
   place-items: center;
   height: 100vh;
@@ -19,6 +23,8 @@ body {
 }
 .start p {
   font-size: 2.5em;
+  font-weight: bold;
+  color: black;
 }
 .start button {
   padding: 0.5em 1em;
