--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,17 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Adjust the values as needed */
-  /* background-image: url("./components/quiz_app_backgroung_images.jpg");
+
+  /* 
+  background-image: url("./components/quiz_app_backgroung_images.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; */
+
+  box-shadow: -0px -0px 1px rgba(3, 7, 18, 0.04),
+    -0px -0px 5px rgba(3, 7, 18, 0.07), -1px -1px 11px rgba(3, 7, 18, 0.11),
+    -1px -1px 19px rgba(3, 7, 18, 0.15), -2px -2px 30px rgba(3, 7, 18, 0.19),
+    -2px -2px 43px rgba(3, 7, 18, 0.22), -3px -3px 58px rgba(3, 7, 18, 0.26);
 }
 body {
   font-family: Montserrat, sans-serif;
@@ -27,7 +33,6 @@ body {
   color: black;
 }
 .start button {
-  padding: 0.5em 1em;
   font-weight: bold;
   margin-top: 2em;
   width: 200px;
@@ -82,7 +87,7 @@ button {
   color: white;
   border-radius: 5px;
   font-size: 1em; /* Adjusted the font size for better readability */
-  padding: 1.4em 1.6em;
+  padding: 1em;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.1s ease;
@@ -109,15 +114,32 @@ button:active {
 .result button {
   margin-left: 10px;
 }
-.correct-answer {
-  background-color: green;
-}
+/* .correct-answer {
+  color: green;
+  border-color: green;
+} */
 
-.incorrect-answer {
-  background-color: red;
-}
+/* .incorrect-answer {
+  color: red;
+  border-color: red;
+} */
 .quiz {
   color: #4d5b9e;
   font-size: 3em;
   margin-top: 0;
+}
+
+.correct-answer input + label {
+  background-color: green;
+  color: white;
+}
+
+.correct-answer input:checked + label {
+  background-color: green;
+  color: white;
+}
+
+.incorrect-answer input:checked + label {
+  background-color: red;
+  color: white;
 }
